# appimaged

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: cpack_debs.cmake  cpack_rpms.cmake
lib/: CMakeLists.txt
resources/: CMakeLists.txt
src/: CMakeLists.txt  main.c  notify.c  notify.h
travis/: check_latest_libappimage_tag.sh  test-appimage.sh  travis-build.sh
